# hlink

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  NOTICE.txt  README.md  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tags
.github/workflows/: docker-build.yml  sphinx.yml
deploy/: global_conf.json  hlink
doc/: developer.md
docs/: .buildinfo  .buildinfo.bak  CNAME  changelog.html  column_mapping.html  column_mapping_transforms.html  column_mappings.html  comparison_features.html  comparison_types.html  comparisons.html  config.html  feature_selection_transforms.html  genindex.html  index.html  installation.html  introduction.html  link_tasks.html  model_exploration.html  models.html  objects.inv  pipeline_features.html  running_the_program.html  search.html  searchindex.js  substitutions.html  use_examples.html
docs/.doctrees/: column_mapping_transforms.doctree  comparison_types.doctree  config.doctree  environment.pickle  example_workflow.doctree  feature_selection_transforms.doctree  index.doctree  installation.doctree  introduction.doctree  link_tasks.doctree  models.doctree  pipeline_features.doctree  running_the_program.doctree  substitutions.doctree  use_examples.doctree
docs/_sources/: changelog.md.txt  column_mapping.md.txt  column_mapping_transforms.md.txt  column_mappings.md.txt  comparison_types.md.txt  comparisons.md.txt  config.md.txt  feature_selection_transforms.md.txt  index.rst.txt  installation.md.txt  introduction.md.txt  link_tasks.md.txt  model_exploration.md.txt  models.md.txt  pipeline_features.md.txt  running_the_program.md.txt  substitutions.md.txt
docs/_static/: documentation_options.js
examples/tutorial/: .gitignore  README.md  tutorial.py  tutorial_config.toml
hlink/: errors.py
hlink/configs/: load_config.py
hlink/linking/: README.md  link_run.py  link_step.py  link_task.py  table.py  table_definitions.csv  util.py
hlink/scripts/: main.py  main_loop.py
hlink/spark/: factory.py  session.py
hlink/tests/: conf_validations_test.py  config_loader_test.py  conftest.py  hh_matching_test.py  hh_model_exploration_test.py  hh_training_test.py  integration_score_with_trained_models_test.py  integration_test.py  linking_util_test.py  logging_test.py  main_loop_test.py  main_test.py  markers.py  matching_blocking_explode_test.py  matching_comparison_features_test.py  matching_geo_distance_test.py  matching_potential_matches_test.py  matching_potential_matches_universe_test.py  matching_scoring_test.py  matching_test.py  model_exploration_test.py  preprocessing_test.py  reporting_test.py  scala_udf_test.py  spark_connection_test.py  spark_factory_test.py  table_test.py  training_test.py  transformers_test.py
hlink_config/config/: test_conf_flag_run.json
output_data/reports/: representivity.csv
scala_jar/: build.sbt
scala_jar/project/: assembly.sbt
sphinx-docs/: Makefile  changelog.md  column_mapping_transforms.md  column_mappings.md  comparison_features.md  comparison_types.md  comparisons.md  conf.py  config.md  feature_selection_transforms.md  index.rst  installation.md  introduction.md  link_tasks.md  model_exploration.md  models.md  running_the_program.md  substitutions.md  use_examples.md
(+212 files in other folders)
